fix spacing

--- a/style.css
+++ b/style.css
@@ -177,14 +177,14 @@ div.main .column{
 	background-color: #ffffff;
 }
 
-
 .zips-over{
   position: absolute;
   bottom: 30%;
   left: 0px;
   width:100%;
   color: #fff;
- }
+}
+
 p.img-over-text{
   color:#ffffff;
   text-shadow: -1px 0 #00bcd4, 0 1px #00bcd4, 1px 0 #00bcd4, 0 -1px #00bcd4;
@@ -193,7 +193,6 @@ p.img-over-text{
   text-align: center;
   width: 100%;
 }
-
 
 div.cards img{
 	width:100%;
@@ -210,7 +209,23 @@ div.cards img{
 	box-shadow: none;
 }
 
+.cards {
+	padding-left: 3%;
+	padding-right: 3%;
+}
+
+.cards .card{
+	overflow: hidden;
+	background-color: #ffffff;
+	vertical-align: middle;
+}
+
+.cards img{
+	background-color: #ffffff;
+}
+
 .ui.card > .image, .ui.cards > .card > .image{
+	margin: 3% 3% 3% 3%;
 	border-radius: 5%;
 	border-style: solid;
 	border-color: #ffffff;
@@ -264,19 +279,6 @@ div.cards img{
 	border-width: 0px;
 	border-color: #ffffff;
 }
-.cards{
-	width: 100%;
-}
-.cards .card{
-	overflow: hidden;
-	background-color: #ffffff;
-	vertical-align: middle;
-	margin-top: 20px;
-}
-
-.cards img{
-	background-color: #ffffff;
-}
 
 .ui .form{
 	color:#00bcd4;
@@ -285,7 +287,7 @@ form{
 	color:#00bcd4;
 }
 .ui.form input[type="text"], .ui.form input[type="password"]{
-	width: 40%;
+	width: 30%;
 	font-size: 28px;
 	margin-top: 10px;
 	margin-bottom: 10px;
